examples/good/06-recursion.oo
int sum(int i) {
    if (i == 1) 
        return 1;
    else 
        return i + sum(i-1);
}

print(sum(10)); // 55
